gccida/c0/fatal_io_error
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/fatal_io_error/src/diagnostic.c:1436:1: error: unknown type name 'output_buffer_0'; did you mean 'output_buffer'?
output_buffer_0 *buffer; // [rsp+18h] [rbp-1D8h] 
^~~~~~~~~~~~~~~
output_buffer
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/fatal_io_error/src/diagnostic.h:28:30: note: 'output_buffer' declared here
typedef struct output_buffer output_buffer;
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/fatal_io_error/src/diagnostic.c:1449:53: error: expected expression
diagnostic_buffer->state.format_args = ( va_list_0 *)ap; 
                                                    ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/fatal_io_error/src/diagnostic.c:1449:42: error: use of undeclared identifier 'va_list_0'
diagnostic_buffer->state.format_args = ( va_list_0 *)ap; 
                                         ^
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/fatal_io_error/src/obj/diagnostic.o] Error 1
